--- a/NoDecentDiary/wwwroot/index.html
+++ b/NoDecentDiary/wwwroot/index.html
@@ -12,7 +12,9 @@
 	<link href="https://cdn.masastack.com/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
 	<link href="https://cdn.masastack.com/npm/materialicons/materialicons.css" rel="stylesheet">
 	<link href="https://cdn.masastack.com/npm/fontawesome/v5.0.13/css/all.css" rel="stylesheet">
-
+	<link href="css/swiper-bundle.min.css" rel="stylesheet" />
+	<script src="js/swiper-bundle.min.js"></script>
+	<script src="js/init-swiper.js"></script>
 </head>
 
 <body>
