feat(PageHistory) : update style

--- a/NoDecentDiary/wwwroot/index.html
+++ b/NoDecentDiary/wwwroot/index.html
@@ -18,7 +18,7 @@
 
 	<div class="status-bar-safe-area"></div>
 
-	<div id="app">Loading...</div>
+	<div id="app"></div>
 
 	<div id="blazor-error-ui">
 		An unhandled error has occurred.
