feat: add User Agreenment and PrivacyPolicy

--- a/NoDecentDiary/wwwroot/index.html
+++ b/NoDecentDiary/wwwroot/index.html
@@ -12,6 +12,7 @@
 	<link href="css/materialdesign/v6.x/css/materialdesignicons.min.css" rel="stylesheet">
 	<link href="css/material/icons.css" rel="stylesheet">
 	<link href="css/fontawesome/v5.15.4/css/all.min.css" rel="stylesheet">
+	<link href="css/vditor.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -28,6 +29,7 @@
 
 	<script src="_framework/blazor.webview.js" autostart="false"></script>
 	<script src="_content/BlazorComponent/js/blazor-component.js"></script>
+	<script src="js/vditor.js"></script>
 </body>
 
 </html>
