🆕 feat: add FirstLaunch

--- a/SwashbucklerDiary/wwwroot/index.html
+++ b/SwashbucklerDiary/wwwroot/index.html
@@ -13,6 +13,11 @@
 	<link href="css/material/icons.css" rel="stylesheet">
 	<link href="css/fontawesome/v5.15.4/css/all.min.css" rel="stylesheet">
 	<link href="npm/vditor/3.9.0/dist/index.css" rel="stylesheet" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism.min.css">
+	<!-- use other theme, such as dracula -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prism-themes@1.9.0/themes/prism-material-dark.min.css">
+
+	
 </head>
 
 <body>
@@ -30,6 +35,10 @@
 	<script src="_framework/blazor.webview.js" autostart="false"></script>
 	<script src="_content/BlazorComponent/js/blazor-component.js"></script>
 	<script src="npm/vditor/3.9.0/dist/index.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/prism.min.js"></script>
+	<!-- and it's easy to individually load additional languages -->
+	<script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-csharp.min.js"></script>
+	<script type="module" src="js/markdown-it-helper.js" ></script>
 </body>
 
 </html>
