💄 style: css normalization

--- a/SwashbucklerDiary/wwwroot/index.html
+++ b/SwashbucklerDiary/wwwroot/index.html
@@ -12,6 +12,10 @@
 	<link href="css/materialdesign/v7.2.96/css/materialdesignicons.min.css" rel="stylesheet">
 	<link href="css/material/icons.css" rel="stylesheet">
 	<link href="npm/vditor/3.9.0/dist/index.css" rel="stylesheet" />
+	<link href="npm/swiper/7.4.1/swiper-bundle.min.css" rel="stylesheet" />
+
+	<link href="css/extend/masa-blazor-extend.css" rel="stylesheet" />
+	<link href="css/extend/vditor-extend.css" rel="stylesheet" />
 </head>
 
 <body>
