🆕 feat(WritePage): allow add image

--- a/SwashbucklerDiary/wwwroot/index.html
+++ b/SwashbucklerDiary/wwwroot/index.html
@@ -33,6 +33,7 @@
 	<script src="_framework/blazor.webview.js" autostart="false"></script>
 	<script src="_content/BlazorComponent/js/blazor-component.js"></script>
 	<script src="npm/vditor/3.9.3/dist/index.min.js"></script>
+	<script src="js/image-render-windows.js"></script>
 </body>
 
 </html>
