--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>SwashbucklerDiary.WebAssembly</title>
+    <title>SwashbucklerDiary</title>
     <base href="/" />
     <script type="text/javascript">
         // Single Page Apps for GitHub Pages
