♻️ refactor: Using fileSystem.js instead of module through IJSRuntime

--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
@@ -81,7 +81,7 @@
     <script src="_content/SwashbucklerDiary.Rcl/js/utility.js"></script>
     <script src="js/global.js"></script>
     <script src="js/spark-md5.min.js"></script>
-    <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="js/fileSystem.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', async () => {
