--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>SwashbucklerDiary</title>
-    <base href="/" />
+    <title>Swashbuckler Diary</title>
+    <base />
     <script type="text/javascript">
         // Single Page Apps for GitHub Pages
         // MIT License
@@ -40,7 +40,7 @@
         }
     </script>
     <link rel="stylesheet" href="css/app.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link href="SwashbucklerDiary.WebAssembly.styles.css" rel="stylesheet" />
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
@@ -69,10 +69,11 @@
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
+        <a href="" class="reload" onclick="swSkipWaiting()">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-    <script src="_framework/blazor.webassembly.js"></script>
+    <script src="js/sw.js"></script>
+    <script src="_framework/blazor.webassembly.js" autostart="false"></script>
     <script src="_content/BlazorComponent/js/blazor-component.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/vditor/3.9.6/dist/index.min.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/swiper/7.4.1/swiper-bundle.min.js"></script>
@@ -82,24 +83,27 @@
     <script src="js/global.js"></script>
     <script src="js/spark-md5.min.js"></script>
     <script src="js/fileSystem.js"></script>
-    <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', async () => {
-                navigator.serviceWorker.register(`/service-worker.js?time=${new Date().getTime()}`)
-                    .then(async reg => {
-                        //安装成功，建议此处强刷新以立刻执行SW
-                        if (window.localStorage.getItem('install') != 'true') {
-                            window.localStorage.setItem('install', 'true');
-                            setTimeout(() => {
-                                window.location.search = `?time=${new Date().getTime()}`
-                            }, 1000)
+    <script type="module">
+        import { BrotliDecode } from './js/decode.min.js';
+        Blazor.start({
+            loadBootResource: function (type, name, defaultUri, integrity) {
+                if (type !== 'dotnetjs' && location.hostname !== 'localhost' && type !== 'configuration') {
+                    return (async function () {
+                        const response = await fetch(defaultUri + '.br', { cache: 'no-cache' });
+                        if (!response.ok) {
+                            throw new Error(response.statusText);
                         }
-                    }).catch(err => {
-                        //安装失败，错误信息会由err传参
-                        console.error(err);
-                    })
-            });
-        }
+                        const originalResponseBuffer = await response.arrayBuffer();
+                        const originalResponseArray = new Int8Array(originalResponseBuffer);
+                        const decompressedResponseArray = BrotliDecode(originalResponseArray);
+                        const contentType = type ===
+                            'dotnetwasm' ? 'application/wasm' : 'application/octet-stream';
+                        return new Response(decompressedResponseArray,
+                            { headers: { 'content-type': contentType } });
+                    })();
+                }
+            }
+        });
     </script>
 </body>
 
