--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
@@ -62,11 +62,19 @@
 
 <body>
     <div id="app">
-        <svg class="loading-progress">
-            <circle r="40%" cx="50%" cy="50%" />
-            <circle r="40%" cx="50%" cy="50%" />
-        </svg>
-        <div class="loading-progress-text"></div>
+        <div style="display: flex;align-items: center;justify-content: center;height: 100vh">
+            <div class="loading-container">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
     </div>
 
     <div id="blazor-error-ui">
