🆕 feat: add ImageWaterfall

--- a/src/SwashbucklerDiary.Maui/wwwroot/index.html
+++ b/src/SwashbucklerDiary.Maui/wwwroot/index.html
@@ -47,6 +47,7 @@
     <script src="_content/SwashbucklerDiary.Rcl/npm/swiper/7.4.1/swiper-bundle.min.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/zoom/zoom.min.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/html2canvas/1.4.1/dist/html2canvas.min.js"></script>
+    <script src="_content/SwashbucklerDiary.Rcl/npm/wc-waterfall/dist/index.iife.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/js/utility.js"></script>
 </body>
 
