♻️ refactor(Vditor): Change the way icons are used

--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
@@ -100,6 +100,7 @@
     <script src="_content/SwashbucklerDiary.Rcl/npm/html2canvas/1.4.1/dist/html2canvas.min.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/wc-waterfall/dist/index.iife.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/js/utility.js"></script>
+    <script src="_content/SwashbucklerDiary.Rcl/js/vditor-icons.js"></script>
     <script src="js/global.js"></script>
     <script src="js/spark-md5.min.js"></script>
     <script src="js/fileSystem.js"></script>
