--- a/src/SwashbucklerDiary.Maui/wwwroot/index.html
+++ b/src/SwashbucklerDiary.Maui/wwwroot/index.html
@@ -48,6 +48,7 @@
     <script src="_content/SwashbucklerDiary.Rcl/npm/wc-waterfall/dist/index.iife.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/js/utility.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/js/vditor-icons.js"></script>
+    <script src="_content/SwashbucklerDiary.Rcl/js/customEvents.js"></script>
 </body>
 
 </html>
