--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
@@ -101,6 +101,7 @@
     <script src="_content/SwashbucklerDiary.Rcl/npm/wc-waterfall/dist/index.iife.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/js/utility.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/js/vditor-icons.js"></script>
+    <script src="_content/SwashbucklerDiary.Rcl/js/customEvents.js"></script>
     <script src="js/global.js"></script>
     <script src="js/spark-md5.min.js"></script>
     <script src="js/fileSystem.js"></script>
