🆕 feat: On web, support change statebar (only Chrome, Safari)

--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
@@ -102,7 +102,7 @@
     <script src="_content/SwashbucklerDiary.Rcl/js/utility.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/js/vditor-icons.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/js/customEvents.js"></script>
-    <script src="js/global.js"></script>
+    <script src="js/utility.js"></script>
     <script src="js/spark-md5.min.js"></script>
     <script src="js/fileSystem.js"></script>
     <script type="module">
