--- a/src/SwashbucklerDiary.Maui/wwwroot/index.html
+++ b/src/SwashbucklerDiary.Maui/wwwroot/index.html
@@ -29,9 +29,11 @@
 
 <body>
 
-    <div class="status-bar-safe-area"></div>
+    <!--<div class="status-bar-safe-area"></div>-->
 
     <div id="app"></div>
+
+    <!--<div class="navigation-bar-safe-area"></div>-->
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
