--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
@@ -103,7 +103,7 @@
     <script src="_content/SwashbucklerDiary.Rcl/js/vditor-icons.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/js/customEvents.js"></script>
     <script src="js/utility.js"></script>
-    <script src="js/spark-md5.min.js"></script>
+    <script src="js/md5.umd.min.js"></script>
     <script src="js/fileSystem.js"></script>
     <script type="module">
         import { BrotliDecode } from './js/decode.min.js';
