--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
@@ -99,6 +99,7 @@
     <script src="_content/SwashbucklerDiary.Rcl/npm/zoom/zoom.min.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/html2canvas/1.4.1/dist/html2canvas.min.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/wc-waterfall/dist/index.iife.js"></script>
+    <script src="_content/SwashbucklerDiary.Rcl/npm/bettersearch/1.0.1/dist/index.umd.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/js/utility.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/js/vditor-icons.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/js/customEvents.js"></script>
