--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
@@ -55,7 +55,8 @@
 
     <link href="_content/Masa.Blazor/css/masa-blazor.min.css" rel="stylesheet">
 
-    <link href="_content/SwashbucklerDiary.Rcl/css/materialdesign/v7.2.96/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="_content/SwashbucklerDiary.Rcl/css/materialdesign/v7.2.96/css/materialdesignicons.min.css"
+        rel="stylesheet">
     <link href="_content/SwashbucklerDiary.Rcl/css/material/icons.css" rel="stylesheet">
     <link href="_content/SwashbucklerDiary.Rcl/npm/vditor/3.10.6/dist/index.css" rel="stylesheet" />
     <link href="_content/SwashbucklerDiary.Rcl/npm/swiper/7.4.1/swiper-bundle.min.css" rel="stylesheet" />
@@ -96,7 +97,7 @@
     <script src="_content/Masa.Blazor/js/masa-blazor.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/vditor/3.10.6/dist/index.min.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/swiper/7.4.1/swiper-bundle.min.js"></script>
-    <script src="_content/SwashbucklerDiary.Rcl/npm/zoom/4.5.1/panzoom.min.js"></script>
+    <script src="_content/SwashbucklerDiary.Rcl/npm/panzoom/4.5.1/panzoom.min.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/html2canvas/1.4.1/dist/html2canvas.min.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/wc-waterfall/0.1.3/dist/index.iife.min.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/bettersearch/1.0.1/dist/index.umd.js"></script>
