--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
@@ -55,8 +55,7 @@
 
     <link href="_content/Masa.Blazor/css/masa-blazor.min.css" rel="stylesheet">
 
-    <link href="_content/SwashbucklerDiary.Rcl/css/materialdesign/v7.2.96/css/materialdesignicons.min.css"
-        rel="stylesheet">
+    <link href="_content/SwashbucklerDiary.Rcl/css/materialdesign/v7.2.96/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="_content/SwashbucklerDiary.Rcl/css/material/icons.css" rel="stylesheet">
     <link href="_content/SwashbucklerDiary.Rcl/npm/vditor/3.10.6/dist/index.css" rel="stylesheet" />
     <link href="_content/SwashbucklerDiary.Rcl/npm/swiper/7.4.1/swiper-bundle.min.css" rel="stylesheet" />
