♻️ refactor: move status-bar-and-navigation-bar.css

--- a/src/SwashbucklerDiary.Maui/wwwroot/index.html
+++ b/src/SwashbucklerDiary.Maui/wwwroot/index.html
@@ -25,6 +25,7 @@
     <link href="SwashbucklerDiary.Maui.styles.css" rel="stylesheet" />
     <link href="_content/SwashbucklerDiary.Rcl/css/app.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
+    <link href="css/status-bar-and-navigation-bar.css" rel="preload" as="style" onload="this.rel='stylesheet'">
 </head>
 
 <body>
