🐛 fix: Low version webview cannot run

--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -92,7 +92,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="js/sw.js"></script>
-    <script src="_framework/blazor.webassembly.js" autostart="false"></script>
+    <script src="framework/blazor.webassembly.js" autostart="false"></script>
     <script src="_content/Masa.Blazor/js/masa-blazor.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/vditor/3.10.7/dist/index.min.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/swiper/7.4.1/swiper-bundle.min.js"></script>
