--- a/src/SwashbucklerDiary.Maui/wwwroot/index.html
+++ b/src/SwashbucklerDiary.Maui/wwwroot/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -15,7 +15,6 @@
     <link href="_content/Masa.Blazor/css/masa-blazor.min.css" rel="stylesheet">
 
     <link href="_content/SwashbucklerDiary.Rcl/css/materialdesign/v7.2.96/css/materialdesignicons.min.css" rel="stylesheet">
-    <link href="_content/SwashbucklerDiary.Rcl/css/material/icons.css" rel="stylesheet">
     <link href="_content/SwashbucklerDiary.Rcl/npm/vditor/3.10.7/dist/index.css" rel="stylesheet" />
     <link href="_content/SwashbucklerDiary.Rcl/npm/swiper/7.4.1/swiper-bundle.min.css" rel="stylesheet" />
 
