fix some issues

--- a/src/SwashbucklerDiary.Gtk/wwwroot/index.html
+++ b/src/SwashbucklerDiary.Gtk/wwwroot/index.html
@@ -21,7 +21,7 @@
     <link href="_content/SwashbucklerDiary.Rcl/css/extend/masa-blazor-extend.css" rel="stylesheet" />
     <link href="_content/SwashbucklerDiary.Rcl/css/extend/vditor-extend.css" rel="stylesheet" />
 
-    <link href="SwashbucklerDiary.Maui.styles.css" rel="stylesheet" />
+    <link href="SwashbucklerDiary.Gtk.styles.css" rel="stylesheet" />
     <link href="_content/SwashbucklerDiary.Rcl/css/app.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
 </head>
