--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
@@ -29,22 +29,28 @@
         }(window.location))
     </script>
     <script>
-        var path = window.location.pathname.split('/');
-        var base = document.getElementsByTagName('base')[0];
-        if (window.location.host.includes('localhost')) {
-            base.setAttribute('href', '/');
-        } else if (path.length > 2) {
-            base.setAttribute('href', '/' + path[1] + '/');
-        } else if (path[path.length - 1].length != 0) {
-            window.location.replace(window.location.origin + window.location.pathname + '/' + window.location.search);
-        }
+        (function () {
+            var path = window.location.pathname.split('/');
+            var base = document.getElementsByTagName('base')[0];
+            if (window.location.host.includes('localhost')) {
+                base.setAttribute('href', '/');
+            } else if (path.length > 2) {
+                base.setAttribute('href', '/' + path[1] + '/');
+            } else if (path[path.length - 1].length != 0) {
+                window.location.replace(window.location.origin + window.location.pathname + '/' + window.location.search);
+            }
+        }());
     </script>
     <script>
         (function () {
-            var lang = localStorage.getItem('Language');
+            const relativePath = window.location.href.replace(document.baseURI, '');
+            if (!relativePath.startsWith('welcome')) {
+                const firstSetLanguage = localStorage.getItem('FirstSetLanguage');
+                const firstAgree = localStorage.getItem('FirstAgree');
 
-            if (lang) {
-                document.documentElement.lang = lang;
+                if (!(firstSetLanguage === 'true' && firstAgree === 'true')) {
+                    window.location.replace('welcome');
+                }
             }
         }());
     </script>
