⚡️ improve: SEO and localize PWA

--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="keywords" content="Swashbuckler Diary, 侠客日记, Diary App, 日记应用">
+    <meta name="description" content="An open source, cross platform local diary application">
     <title>Swashbuckler Diary</title>
     <base />
     <script type="text/javascript">
@@ -80,7 +82,7 @@
         </div>
     </div>
 
-    <div id="blazor-error-ui">
+    <div id="blazor-error-ui" data-nosnippet>
         An unhandled error has occurred.
         <a href="" class="reload" onclick="swSkipWaiting()">Reload</a>
         <a class="dismiss">🗙</a>
