--- a/src/SwashbucklerDiary.Maui/wwwroot/index.html
+++ b/src/SwashbucklerDiary.Maui/wwwroot/index.html
@@ -37,7 +37,7 @@
         <a class="dismiss">🗙</a>
     </div>
 
-    <script src="framework/blazor.webview.js" autostart="false"></script>
+    <script src="_framework/blazor.webview.es2019.js" autostart="false"></script>
     <script src="_content/Masa.Blazor/js/masa-blazor.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/vditor@3.11.2/dist/index.min.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/swiper@7.4.1/swiper-bundle.min.js"></script>
