--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
@@ -62,7 +62,6 @@
     <link href="SwashbucklerDiary.WebAssembly.styles.css" rel="stylesheet" />
     <link href="_content/SwashbucklerDiary.Rcl/css/app.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/app.css" />
-
 </head>
 
 <body>
@@ -88,7 +87,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="js/sw.js"></script>
-    <script src="framework/blazor.webassembly.js" autostart="false"></script>
+    <script src="_framework/blazor.webassembly.es2019.js" autostart="false"></script>
     <script src="_content/Masa.Blazor/js/masa-blazor.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/vditor@3.11.2/dist/index.min.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/swiper@7.4.1/swiper-bundle.min.js"></script>
