--- a/src/SwashbucklerDiary.Gtk/wwwroot/index.html
+++ b/src/SwashbucklerDiary.Gtk/wwwroot/index.html
@@ -36,7 +36,7 @@
         <a class="dismiss">🗙</a>
     </div>
 
-    <script src="_framework/blazor.webview.js"></script>
+    <script src="_framework/blazor.webview.es2019.js"></script>
     <script src="_content/Masa.Blazor/js/masa-blazor.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/vditor@3.11.2/dist/index.min.js"></script>
     <script src="_content/SwashbucklerDiary.Rcl/npm/swiper@7.4.1/swiper-bundle.min.js"></script>
