♻️ refactor: Optimize the page height when the soft keyboard pops up on Web

--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/index.html
@@ -62,6 +62,7 @@
 
     <link href="SwashbucklerDiary.WebAssembly.styles.css" rel="stylesheet" />
     <link href="_content/SwashbucklerDiary.Rcl/css/app.css" rel="stylesheet" />
+    <link href="_content/SwashbucklerDiary.Rcl.Web/css/app.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/app.css" />
     <script type="importmap"></script>
 </head>
